// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: ChannelMessage should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 12,
        "flexDirection": "row",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
        "paddingRight": 30,
        "shadowColor": "#0A140C",
        "shadowOffset": {
          "height": 12,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 16,
      },
      false,
      {
        "backgroundColor": "#FDFDFC",
        "borderColor": "#E1E7E1",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
  testID="in-app-notification-Hey! How are you doing?"
>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#ECEFEB"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderRadius": undefined,
            "flexDirection": "row",
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="in-app-notification-Hey! How are you doing?"
      underlayColor="#ECEFEB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#ECEFEB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="rocket.cat's avatar"
          accessible={true}
          style={
            [
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              },
              {
                "marginRight": 12,
              },
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={13}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={42}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/room/rid-1?format=png&size=84",
                },
              ]
            }
            style={
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              }
            }
            transition={null}
            width={42}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginRight": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontWeight": "700",
                  "lineHeight": 20,
                  "textAlign": "left",
                },
                {
                  "color": "#16211A",
                },
              ]
            }
          >
            general
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 15,
                  "fontWeight": "400",
                  "lineHeight": 19,
                  "textAlign": "left",
                },
                {
                  "color": "#26312A",
                },
              ]
            }
          >
            Hey! How are you doing?
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#ECEFEB"
      style={
        [
          {
            "backgroundColor": "#EAF6EC",
            "borderRadius": 10,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#ECEFEB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#ECEFEB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 10,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#148B3B",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
</View>
`;

exports[`Story Snapshots: DirectMessage should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 12,
        "flexDirection": "row",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
        "paddingRight": 30,
        "shadowColor": "#0A140C",
        "shadowOffset": {
          "height": 12,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 16,
      },
      false,
      {
        "backgroundColor": "#FDFDFC",
        "borderColor": "#E1E7E1",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
  testID="in-app-notification-Hey! How are you doing?"
>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#ECEFEB"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderRadius": undefined,
            "flexDirection": "row",
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="in-app-notification-Hey! How are you doing?"
      underlayColor="#ECEFEB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#ECEFEB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="diego.mello's avatar"
          accessible={true}
          style={
            [
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              },
              {
                "marginRight": 12,
              },
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={13}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={42}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/diego.mello?format=png&size=84",
                },
              ]
            }
            style={
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              }
            }
            transition={null}
            width={42}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginRight": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontWeight": "700",
                  "lineHeight": 20,
                  "textAlign": "left",
                },
                {
                  "color": "#16211A",
                },
              ]
            }
          >
            diego.mello
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 15,
                  "fontWeight": "400",
                  "lineHeight": 19,
                  "textAlign": "left",
                },
                {
                  "color": "#26312A",
                },
              ]
            }
          >
            Hey! How are you doing?
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#ECEFEB"
      style={
        [
          {
            "backgroundColor": "#EAF6EC",
            "borderRadius": 10,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#ECEFEB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#ECEFEB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 10,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#148B3B",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
</View>
`;

exports[`Story Snapshots: WithBlackTheme should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 12,
        "flexDirection": "row",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
        "paddingRight": 30,
        "shadowColor": "#0A140C",
        "shadowOffset": {
          "height": 12,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 16,
      },
      false,
      {
        "backgroundColor": "#0B0F0C",
        "borderColor": "#18211B",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
  testID="in-app-notification-Hey! How are you doing?"
>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#141B16"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderRadius": undefined,
            "flexDirection": "row",
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="in-app-notification-Hey! How are you doing?"
      underlayColor="#141B16"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#141B16",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="rocket.cat's avatar"
          accessible={true}
          style={
            [
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              },
              {
                "marginRight": 12,
              },
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={13}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={42}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/room/rid-1?format=png&size=84",
                },
              ]
            }
            style={
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              }
            }
            transition={null}
            width={42}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginRight": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontWeight": "700",
                  "lineHeight": 20,
                  "textAlign": "left",
                },
                {
                  "color": "#EDF2EE",
                },
              ]
            }
          >
            general
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 15,
                  "fontWeight": "400",
                  "lineHeight": 19,
                  "textAlign": "left",
                },
                {
                  "color": "#D5DED7",
                },
              ]
            }
          >
            Hey! How are you doing?
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#141B16"
      style={
        [
          {
            "backgroundColor": "#122116",
            "borderRadius": 10,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#141B16"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#141B16",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 10,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#48C46A",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
</View>
`;

exports[`Story Snapshots: WithDarkTheme should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 12,
        "flexDirection": "row",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
        "paddingRight": 30,
        "shadowColor": "#0A140C",
        "shadowOffset": {
          "height": 12,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 16,
      },
      false,
      {
        "backgroundColor": "#161D18",
        "borderColor": "#26302A",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
  testID="in-app-notification-Hey! How are you doing?"
>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#222B24"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderRadius": undefined,
            "flexDirection": "row",
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="in-app-notification-Hey! How are you doing?"
      underlayColor="#222B24"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#222B24",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="rocket.cat's avatar"
          accessible={true}
          style={
            [
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              },
              {
                "marginRight": 12,
              },
            ]
          }
          testID="avatar"
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={13}
            containerViewRef={{"current":"Object"}}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={42}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            priority="high"
            source={
              [
                {
                  "headers": {
                    "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                  },
                  "uri": "https://open.rocket.chat/avatar/room/rid-1?format=png&size=84",
                },
              ]
            }
            style={
              {
                "borderRadius": 13,
                "height": 42,
                "width": 42,
              }
            }
            transition={null}
            width={42}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginRight": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontWeight": "700",
                  "lineHeight": 20,
                  "textAlign": "left",
                },
                {
                  "color": "#EDF2EE",
                },
              ]
            }
          >
            general
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 15,
                  "fontWeight": "400",
                  "lineHeight": 19,
                  "textAlign": "left",
                },
                {
                  "color": "#D5DED7",
                },
              ]
            }
          >
            Hey! How are you doing?
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#222B24"
      style={
        [
          {
            "backgroundColor": "#17281C",
            "borderRadius": 10,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#222B24"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#222B24",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 10,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#48C46A",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>
</View>
`;
